--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "axios": "^0.25.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "mongoose": "^6.1.7"
+    "mongoose": "^6.1.7",
+    "uuid": "^8.3.2"
   }
 }
