--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "ably": "^1.2.17",
     "axios": "^0.25.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.7",
     "uuid": "^8.3.2"
