--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
     "@sveltejs/adapter-node": "^1.0.0-next.70",
+    "ably": "^1.2.20",
     "axios": "^0.25.0",
     "cookie": "^0.4.1"
   }
